gitops/apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"filebrowser","namespace":"filebrowser"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"filebrowser"}},"template":{"metadata":{"labels":{"app":"filebrowser"}},"spec":{"containers":[{"env":[{"name":"FB_BASEURL","value":"/"}],"image":"hurlenko/filebrowser","name":"filebrowser","ports":[{"containerPort":8080}],"resources":{"limits":{"cpu":"500m","memory":"256Mi"},"requests":{"cpu":"50m","memory":"64Mi"}}," [...]
  creationTimestamp: "2026-01-10T20:57:53Z"
  generation: 1
  name: filebrowser
  namespace: filebrowser
  resourceVersion: "5695282"
  uid: c8b49e32-9d59-4879-a222-9267b33cb5da
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: filebrowser
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: filebrowser
    spec:
      containers:
      - env:
        - name: FB_BASEURL
          value: /
        image: hurlenko/filebrowser
        imagePullPolicy: Always
        name: filebrowser
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: filebrowser-data
      - emptyDir: {}
        name: config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-01-10T20:57:53Z"
    lastUpdateTime: "2026-01-10T20:58:26Z"
    message: ReplicaSet "filebrowser-74496f885" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-01-10T21:43:26Z"
    lastUpdateTime: "2026-01-10T21:43:26Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
